[package]
name = "mmoreseqs"
version = "0.1.0"
authors = ["Jack Roddy <jack.w.roddy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
nale = { path = "../nale" }
anyhow = "1.0.66"
thiserror = "1.0.37"

[profile.dev]
opt-level = 3

